Small changes to IO code

--- a/CubeIDEProject/Debug/makefile
+++ b/CubeIDEProject/Debug/makefile
@@ -13,6 +13,7 @@ RM := rm -rf
 -include Core/Startup/subdir.mk
 -include Core/Src/subdir.mk
 -include Core/Inc/Math/subdir.mk
+-include Core/Inc/IO/subdir.mk
 -include Core/Inc/Filters/subdir.mk
 -include Core/Inc/DSP/subdir.mk
 -include Core/Inc/DFT/subdir.mk
