--- a/SEAG_F/Debug/makefile
+++ b/SEAG_F/Debug/makefile
@@ -14,6 +14,7 @@ RM := rm -rf
 -include Core/Src/subdir.mk
 -include Core/Inc/Math/subdir.mk
 -include Core/Inc/IO/subdir.mk
+-include Core/Inc/Filters/FilterUtility/subdir.mk
 -include Core/Inc/Filters/subdir.mk
 -include Core/Inc/DSP/subdir.mk
 -include Core/Inc/DFT/subdir.mk
